2008-12-30 Raphael Neider <rneider AT web.de>

	* as/link/hc08/lkelf.c, as/link/lkaomf51.c, as/link/lklibr.c,
	  as/link/z80/lkgb.c, debugger/mcs51/cmd.c, sim/ucsim/utils.cc,
	  src/SDCCasm.c, support/Util/dbuf_string.c, support/cpp/c-ppoutput.c,
	  support/cpp/libcpp/lex.c, support/cpp/libcpp/macro.c,
	  support/librarian/sdcclib.c, support/makebin/makebin.c:
	  partially revert changes from r5293..r5295

2008-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole improvement.

2008-12-29 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (insertBankSel, FixRegisterBanking): emit
	  incorrectly discarded BANKSELs

2008-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/memory.c:
	  Added simple test for memset(), memcpy() and memmove()

2008-12-29 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/scripts/sdcc.nsi: removed $INSTDIR\lib\src\z80\*.c

2008-12-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def (177.e): replaced notVolatile(%3) with
	  operandsNotRelated(%1 %3), had to change (a)r%1 to (a)%1 for this to work
	  (177.j): added new rule
	* src/SDCCsymt.h: added RESULT_TYPE_GPTR
	* src/SDCCast.c (processParms): use RESULT_TYPE_GPTR for generic ptr parms,
	  (decorateType CAST): propagate storage class to generic pointer results

2008-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/string.c,
	  device/lib/z80/printf.c,
	  device/lib/z80/mul.s:
	  z80 library cleanup
	* src/z80/gen.c:
	  Fixed code generation bug exposed by builtin memcpy().

2008-12-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_memcpy.c:
	  fixed conflict with builtin memcpy()

2008-12-26 Borut Razem <borut.razem AT siol.net>

	* support/librarian/sdcclib.c:
	  fixed bug 2466950: "sdcclib broken"
	  by removing fgets return value check

2008-12-26 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/main.c,
	  src/z80/gen.c,
	  device/include/string.h: Implemented RFE #1914254
